2019_lsp_project1/reference/ERROR/20190009/11_error.txt
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190009/11.c: In function ‘ssu_signal’:
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190009/11.c:7:1: error: expected ‘;’ before ‘}’ token
 }
 ^
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190009/11.c: In function ‘main’:
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190009/11.c:20:7: warning: implicit declaration of function ‘getpid’; did you mean ‘getenv’? [-Wimplicit-function-declaration]
  kill(getpid(),SIGUSR1);
       ^~~~~~
       getenv
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190009/11.c:23:10: warning: implicit declaration of function ‘fork’ [-Wimplicit-function-declaration]
  if((pid=fork()) < 0){
          ^~~~
